Prevent icon/toggle wrapping to new line.

--- a/projects/packages/search/src/dashboard/components/donut-meter-container/style.scss
+++ b/projects/packages/search/src/dashboard/components/donut-meter-container/style.scss
@@ -16,6 +16,7 @@
 		height: auto;
 		margin: 0 8px;
 		padding: 8px 0;
+		white-space: nowrap;
 	}
 
 	.donut-info-primary {
